[gd_scene load_steps=23 format=3 uid="uid://j1px6ey07p2f"]

[ext_resource type="Script" uid="uid://ds6cq7tyxjvrc" path="res://src/player/player.gd" id="1_4anbu"]
[ext_resource type="Script" uid="uid://bocfext65sbpj" path="res://src/player/camera.gd" id="2_244u8"]
[ext_resource type="Script" uid="uid://dys3s0o8myw2e" path="res://src/player/weapon/weapon_handler.gd" id="2_rxibo"]
[ext_resource type="PackedScene" uid="uid://dgyf0q5uvvtna" path="res://src/player/arms.glb" id="5_wlj80"]
[ext_resource type="PackedScene" uid="uid://dslxsxr407xd" path="res://src/player/character.glb" id="6_jiejy"]
[ext_resource type="PackedScene" uid="uid://bl08qnvut26i8" path="res://src/menus/settings/settings_menu.tscn" id="6_x42xx"]
[ext_resource type="Script" uid="uid://cuhfu4wnvmo3h" path="res://src/target/body_part.gd" id="7_o822w"]
[ext_resource type="Texture2D" uid="uid://cncfrlllaohv5" path="res://src/textures/sniper_overlay.png" id="11_ylhto"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5f2sf"]
radius = 0.25
height = 2.1

[sub_resource type="BoxShape3D" id="BoxShape3D_jiejy"]
size = Vector3(0.282776, 0.666626, 0.451675)

[sub_resource type="BoxShape3D" id="BoxShape3D_o822w"]
size = Vector3(0.117188, 0.393921, 0.181152)

[sub_resource type="BoxShape3D" id="BoxShape3D_l271a"]
size = Vector3(0.117188, 0.456848, 0.181152)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l271a"]
radius = 0.110053
height = 1.10053

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ydov"]
radius = 0.0723312
height = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_x42xx"]
size = Vector3(0.117188, 0.390961, 0.181152)

[sub_resource type="BoxShape3D" id="BoxShape3D_8ydov"]
size = Vector3(0.117188, 0.472015, 0.181152)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2smqc"]
radius = 0.110053
height = 1.10053

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rl62b"]
radius = 0.0723312
height = 0.4

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_xif4h"]
filters = ["FullArmature/Skeleton3D:foot.l", "FullArmature/Skeleton3D:foot.r", "FullArmature/Skeleton3D:lowerleg.l", "FullArmature/Skeleton3D:lowerleg.r", "FullArmature/Skeleton3D:middle", "FullArmature/Skeleton3D:upperleg.l", "FullArmature/Skeleton3D:upperleg.r"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qo2m1"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ssg5i"]
animation = &"run"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o822w"]
graph_offset = Vector2(-424.111, 105.055)
nodes/blend/node = SubResource("AnimationNodeBlend2_xif4h")
nodes/blend/position = Vector2(100, 100)
nodes/idle/node = SubResource("AnimationNodeAnimation_qo2m1")
nodes/idle/position = Vector2(-120, 100)
nodes/output/position = Vector2(420, 100)
nodes/run/node = SubResource("AnimationNodeAnimation_ssg5i")
nodes/run/position = Vector2(-117.241, 285.401)
node_connections = [&"blend", 0, &"idle", &"blend", 1, &"run", &"output", 0, &"blend"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("sniper_overlay", "main_menu_btn", "quit_btn", "pause_menu", "bone_simulator", "ragdoll_camera")]
collision_layer = 2
script = ExtResource("1_4anbu")
sniper_overlay = NodePath("UI/Control/SniperOverlay")
main_menu_btn = NodePath("UI/Control/PauseMenu/MarginContainer/VBoxContainer/HFlowContainer/MainMenu")
quit_btn = NodePath("UI/Control/PauseMenu/MarginContainer/VBoxContainer/HFlowContainer/Quit")
pause_menu = NodePath("UI/Control/PauseMenu")
bone_simulator = NodePath("ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D")
ragdoll_camera = NodePath("ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone middle/RagdollCamera")

[node name="Eye" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
top_level = true

[node name="Camera" type="Camera3D" parent="Eye"]
cull_mask = 1
script = ExtResource("2_244u8")

[node name="WeaponHandler" type="Node3D" parent="Eye/Camera"]
physics_interpolation_mode = 2
script = ExtResource("2_rxibo")
sway_left = Vector3(-0.1, 0, 0)
sway_right = Vector3(0.1, 0, 0)
sway_left_rot = Vector3(0, 0, 0.2)
sway_right_rot = Vector3(0, 0, -0.2)
sway_forward = Vector3(0, 0, -0.1)
sway_backward = Vector3(0, 0, 0.1)
sway_vertical = Vector3(0, 0.03, 0)
recoil_reset_time = 0.1
recoil_reset_speed = 700.0

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="Eye/Camera/WeaponHandler"]

[node name="GunContainer" type="Node3D" parent="Eye/Camera/WeaponHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.347699, -0.392556, -0.757384)

[node name="Arms" parent="Eye/Camera/WeaponHandler" instance=ExtResource("5_wlj80")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.052727, -1.66623, 0.188619)

[node name="arms" parent="Eye/Camera/WeaponHandler/Arms/Armature/Skeleton3D" index="0"]
layers = 2

[node name="RHandIk" type="SkeletonIK3D" parent="Eye/Camera/WeaponHandler/Arms/Armature/Skeleton3D" index="1"]
root_bone = &"upperarm.r"
tip_bone = &"hand.r"

[node name="LHandIk" type="SkeletonIK3D" parent="Eye/Camera/WeaponHandler/Arms/Armature/Skeleton3D" index="2"]
root_bone = &"upperarm.l"
tip_bone = &"hand.l"

[node name="GunVPContainer" type="SubViewportContainer" parent="Eye/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GunVP" type="SubViewport" parent="Eye/Camera/GunVPContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GunCam" type="Camera3D" parent="Eye/Camera/GunVPContainer/GunVP"]
physics_interpolation_mode = 2
top_level = true
cull_mask = 2
fov = 90.0
near = 0.2

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
visible = false
shape = SubResource("CapsuleShape3D_5f2sf")

[node name="Name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30343, 0)
visible = false
billboard = 2
texture_filter = 0
text = "Unnamed Player"

[node name="CameraAnchor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SniperOverlay" type="TextureRect" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_ylhto")

[node name="Crosshair" type="Control" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="UI/Control/Crosshair"]
layout_mode = 0
offset_left = -2.0
offset_top = -8.0
offset_right = 2.0
offset_bottom = 8.0

[node name="ColorRect2" type="ColorRect" parent="UI/Control/Crosshair"]
layout_mode = 0
offset_left = -8.0
offset_top = -2.0
offset_right = 8.0
offset_bottom = 2.0

[node name="PauseMenu" type="Control" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HFlowContainer" type="HFlowContainer" parent="UI/Control/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10

[node name="MainMenu" type="Button" parent="UI/Control/PauseMenu/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Main Menu"

[node name="Quit" type="Button" parent="UI/Control/PauseMenu/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Quit"

[node name="SettingsMenu" parent="UI/Control/PauseMenu/MarginContainer/VBoxContainer" instance=ExtResource("6_x42xx")]
layout_mode = 2
size_flags_vertical = 3

[node name="ThirdPerson" type="Node3D" parent="."]

[node name="Model" parent="ThirdPerson" instance=ExtResource("6_jiejy")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.11, 0)

[node name="Skeleton3D" parent="ThirdPerson/Model/FullArmature" index="0"]
bones/0/rotation = Quaternion(0.0736513, 7.89571e-19, 7.87687e-19, 0.997284)
bones/1/rotation = Quaternion(0.00331751, 0.048432, 0.998061, -0.0389462)
bones/2/rotation = Quaternion(-0.160132, 0.00531847, -0.0251637, 0.986761)
bones/4/rotation = Quaternion(0.000252552, 0.140266, 0.989975, 0.0165903)
bones/5/rotation = Quaternion(-0.135345, -7.29387e-05, -0.013192, 0.990711)
bones/6/rotation = Quaternion(-0.601822, -7.07935e-08, 0.00584188, 0.798609)
bones/7/rotation = Quaternion(-0.00363418, 0.0567428, 0.997621, 0.0389786)
bones/8/rotation = Quaternion(-0.158081, -0.00521137, 0.0251845, 0.987091)
bones/10/rotation = Quaternion(-0.000252552, 0.140266, 0.989975, -0.0165903)
bones/11/rotation = Quaternion(-0.135345, 7.29387e-05, 0.013192, 0.990711)
bones/12/rotation = Quaternion(-0.601822, 7.07935e-08, -0.00584188, 0.798609)

[node name="RHandIk" type="SkeletonIK3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D" index="1"]
root_bone = &"upperarm.r"
tip_bone = &"hand.r"

[node name="LHandIk" type="SkeletonIK3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D" index="2"]
root_bone = &"upperarm.l"
tip_bone = &"hand.l"

[node name="PhysicalBoneSimulator3D" type="PhysicalBoneSimulator3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D" index="3"]

[node name="Physical Bone middle" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(0.137995, -1.81841, -0.821177, -0.293675, 0.795663, -1.81126, 1.9735, 0.245553, -0.212112, 0.248761, 0.586959, -0.0785184)
collision_layer = 4
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00117312, -0.0064436, 0.317398)
body_offset = Transform3D(0.137995, -1.81841, -0.821177, -0.000576317, 0.823103, -1.82277, 1.99523, 0.126004, 0.0562681, 0.248761, 0.583849, -0.0193881)
bone_name = "middle"
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone middle"]
transform = Transform3D(0.996346, -0.0589034, -0.0617929, 0.0811298, 0.427955, 0.900137, -0.0265776, -0.901864, 0.431169, 0.0123719, 0.135744, -0.0109401)
shape = SubResource("BoxShape3D_jiejy")

[node name="RagdollCamera" type="Camera3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone middle"]
transform = Transform3D(-0.000501409, 0.154773, 0.98795, -0.954548, 0.294392, -0.0466042, -0.298057, -0.943069, 0.147591, -0.0737998, 0.276056, -0.303332)

[node name="Physical Bone upperarm_r" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99378, 0.00582679, -0.157551, -0.157642, -0.102318, 1.99115, -0.00225909, 1.99737, 0.102458, 0.533582, 0.678269, -0.0373126)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000450145, 9.83973e-05, 0.22319)
body_offset = Transform3D(2, 2.92575e-06, 0.00143427, 0.00143424, 0.00167015, -2, -4.11877e-06, 2, 0.00167011, -0.00122041, 0.446379, -0.000569545)
bone_name = "upperarm.r"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone upperarm_r"]
transform = Transform3D(1, 4.74662e-07, -3.95812e-09, 6.0536e-09, 5.81145e-07, 0.999994, 6.9664e-07, -1, 6.10948e-07, -0.0212833, -0.00735264, 0.0607054)
shape = SubResource("BoxShape3D_o822w")

[node name="Physical Bone lowerarm_r" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99928, 0.0177396, -0.0504841, -0.0534774, -0.728363, 1.86189, -0.00187078, 1.86257, 0.728577, 0.572624, -0.0306823, -0.167928)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000480936, -1.90829e-05, 0.150302)
body_offset = Transform3D(2, 3.60422e-07, -5.71657e-07, -4.2055e-07, 0.00128502, -2, -3.1048e-07, 2, 0.00128758, 0.000961959, 0.300603, -0.00015536)
bone_name = "lowerarm.r"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone lowerarm_r"]
transform = Transform3D(1, -3.42261e-08, -6.51926e-09, -7.91624e-09, 5.96046e-08, 1, 1.81608e-08, -1, 4.47035e-07, 0.000254035, 0.000231177, -0.0315962)
shape = SubResource("BoxShape3D_l271a")

[node name="Physical Bone upperleg_r" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.9989, 0.010308, 0.0655528, 0.0663424, 0.267127, 1.98097, 0.00145449, 1.98205, -0.267322, 0.158502, -0.893554, 0.00633574)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000399981, -0.00194609, 0.280953)
body_offset = Transform3D(2, -5.52507e-07, 1.66749e-06, 1.65001e-06, 2.53916e-05, -2, 5.54137e-07, 2, 2.53022e-05, 0.000799492, 0.561907, 0.00388508)
bone_name = "upperleg.r"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")
multiplier = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone upperleg_r"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_l271a")

[node name="Physical Bone lowerleg_r" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99644, -0.0144993, 0.118351, 0.119223, -0.272177, 1.9778, 0.00176794, 1.98134, 0.272557, 0.120208, -1.81739, 0.011247)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000956129, 0.0047224, 0.197678)
body_offset = Transform3D(2, 8.90174e-05, -0.00015812, -0.000158073, -0.00149396, -2, -8.91148e-05, 2, -0.00149214, -0.00188142, 0.395364, -0.00914977)
bone_name = "lowerleg.r"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")
multiplier = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone lowerleg_r"]
transform = Transform3D(1, -6.26245e-06, 5.0027e-05, -5.00203e-05, 0.000846252, 1, -6.28979e-06, -1, 0.000846282, -0.00143161, 0.00382296, -0.0237055)
shape = SubResource("CapsuleShape3D_8ydov")

[node name="Physical Bone upperarm_l" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99368, -0.00581488, 0.158754, 0.15886, -0.0693706, 1.99247, -0.000286576, 1.99879, 0.0696133, -0.533466, 0.681816, -0.0300328)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000410839, 0.000190437, 0.221261)
body_offset = Transform3D(2, 2.79656e-06, -0.00239876, -0.00239873, 0.00200773, -2, -3.88565e-07, 2, 0.00200775, 0.00135243, 0.44252, -0.000825111)
bone_name = "upperarm.l"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone upperarm_l"]
transform = Transform3D(1, -6.14091e-08, 9.31323e-10, -7.45058e-09, 4.47035e-08, 1, -8.89995e-08, -1, 8.9407e-08, -0.00246167, 0.0137281, 0.0664199)
shape = SubResource("BoxShape3D_x42xx")

[node name="Physical Bone lowerarm_l" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99928, -0.017778, 0.050795, 0.0538098, -0.689591, 1.87658, 0.000832942, 1.87727, 0.68982, -0.573677, -0.0351087, -0.148209)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.28352e-05, 1.02064e-05, 0.151183)
body_offset = Transform3D(2, -4.1374e-07, -6.69672e-05, -6.71396e-05, 0.00145268, -2, 4.0757e-07, 2, 0.00145471, -9.55462e-05, 0.302367, -0.000240341)
bone_name = "lowerarm.l"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone lowerarm_l"]
transform = Transform3D(1, 5.75674e-08, 4.77303e-09, -5.93718e-09, 3.27826e-07, 1, -3.05008e-08, -1, 1.49012e-07, -0.00397545, 0.010631, -0.0219338)
shape = SubResource("BoxShape3D_8ydov")

[node name="Physical Bone upperleg_l" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.9989, -0.0103081, -0.0655526, -0.0663422, 0.267148, 1.98097, -0.00145383, 1.98205, -0.267343, -0.159117, -0.887669, 0.00678838)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000190562, -0.00256207, 0.278059)
body_offset = Transform3D(2, -1.10478e-07, -1.70445e-06, -1.68207e-06, 4.35114e-06, -2, 1.07917e-07, 2, 4.23193e-06, -0.00038065, 0.556118, 0.00512297)
bone_name = "upperleg.l"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")
multiplier = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone upperleg_l"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_2smqc")

[node name="Physical Bone lowerleg_l" type="PhysicalBone3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D" node_paths=PackedStringArray("owned_by")]
transform = Transform3D(-1.99645, 0.0144831, -0.118282, -0.119151, -0.27251, 1.97776, -0.00179438, 1.98129, 0.272889, -0.120213, -1.81921, 0.0112884)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00100577, 0.00454504, 0.198574)
body_offset = Transform3D(2, -5.30498e-05, 9.05302e-05, 9.05348e-05, -0.0011594, -2, 5.30811e-05, 2, -0.00115758, 0.00199381, 0.397154, -0.00886017)
bone_name = "lowerleg.l"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("7_o822w")
owned_by = NodePath("../../../../../..")
multiplier = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="ThirdPerson/Model/FullArmature/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone lowerleg_l"]
transform = Transform3D(1, 8.38915e-06, -6.87029e-05, 6.86927e-05, 0.00116071, 0.999999, 8.4638e-06, -0.999999, 0.00116074, 0.00155751, 0.00266062, -0.0259789)
shape = SubResource("CapsuleShape3D_rl62b")

[node name="AnimationTree" type="AnimationTree" parent="ThirdPerson"]
root_node = NodePath("../Model")
tree_root = SubResource("AnimationNodeBlendTree_o822w")
anim_player = NodePath("../Model/AnimationPlayer")
parameters/blend/blend_amount = 0.0

[node name="WeaponPosTP" type="Marker3D" parent="ThirdPerson"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.237534, 0.521239, -0.413876)

[editable path="Eye/Camera/WeaponHandler/Arms"]
[editable path="ThirdPerson/Model"]
